--- a/q/274938.html
+++ b/q/274938.html
@@ -26,19 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>JavaScript</td><td>240814T040231Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274966#274966">noodle p</a></td></tr>
-<tr d-ix="1"><td>024</td><td>K ngn/k</td><td>240814T142209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274975#274975">att</a></td></tr>
-<tr d-ix="2"><td>082</td><td>R</td><td>240813T202411Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274962#274962">int 21h </a></td></tr>
-<tr d-ix="3"><td>051</td><td>R</td><td>240814T114338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274970#274970">Dominic </a></td></tr>
-<tr d-ix="4"><td>052</td><td>APL+WIN</td><td>240813T170209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274959#274959">Graham</a></td></tr>
-<tr d-ix="5"><td>049</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>048</td><td>Python 2</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>047</td><td>JavaScript</td><td>240814T040231Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274966#274966">noodle p</a></td></tr>
+<tr d-ix="2"><td>024</td><td>K ngn/k</td><td>240814T142209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274975#274975">att</a></td></tr>
+<tr d-ix="3"><td>082</td><td>R</td><td>240813T202411Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274962#274962">int 21h </a></td></tr>
+<tr d-ix="4"><td>051</td><td>R</td><td>240814T114338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274970#274970">Dominic </a></td></tr>
+<tr d-ix="5"><td>052</td><td>APL+WIN</td><td>240813T170209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274959#274959">Graham</a></td></tr>
 <tr d-ix="6"><td>013</td><td>05AB1E</td><td>240813T091741Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274956#274956">Kevin Cr</a></td></tr>
 <tr d-ix="7"><td>033</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
 <tr d-ix="8"><td>044</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 <tr d-ix="9"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="10"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, <s>50</s> 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>58</s> <s>54</s> <s>53</s> <s>51</s> <s>49</s> 48 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))/2
+</code></pre>
+<p><a href="https://tio.run/##hZHBbsIwDIbve4pcJrXIKLEdp8kknoRx6DTYkLYyARL0wqt3diZNcGA79GvsOP9vJ1/j8X030LRZPE8f/efLa@/OMMIJhqfzbJxdmrN@g65o3gyPJ/2d2tllPratp6k/HNb743LTMERA8p6hbze7vevddnD7fnhbN4jtarFYEmVwlCI4DkHBCVwOGuaoYe40LEjgkLPGGDEZhVYPvyaiJhS8l7smybS6KmgoBqJKroyVYuRawrUmhhiujBAQkvd418c6VB09rmfBCTjttlNX9dStay1tGSh6H@@KYcg2qml2Kkl2KWTXQ0k3YtGckLmI5iRrLtGtg/zjUIqJh86IYiQ2MlaW@h6V0WpYrIaT1XB3Mw2rV/nzmbOYWD2pq5KqcxBjdU5s65R/xhUbFev7iKymbw" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript, <s>50</s> 47 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*(x*n/w*w*y+(w*~-y+~-x)/2n+x*n%w)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LYtBCsIwEABfI2w2G2MVQbHxM9pIoOyCVja59CO9BNFH-RsL9jJzGGZ6s1y7-orh8xyiO3w9MGUqpCacMxaEjOwVFYsFxdEVO7ps_JbtHFZqls1FuUMKGz6ltmlmWmsuwg_pu3UvN4iQaMe0ZzqyWaZa__4B" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -82,14 +88,14 @@ x*y*((x*n/w*w*y*2n+~-y*w+~-x)/2n+x*n%w)             // factor out x*y
 x*y*(x*n/w*w*y+(~-y*w+~-x)/2n+x*n%w)                // factor out 2
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>{+/y/(!x)+x*(0,_y%x 1)\}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJwVyj0OgCAMQOGdU5TB0KpR/jTRHkWMm2coEu4uTN8b3nuWac0raqFJRrTzkwcBR6kqpQokFMbyXnkW/u66CBkdLFWDASI4z1vDW3bgYOeW4GNj64TGwf07iH9pJRgf" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Input <code>[y x;w]</code>. Returns a function that computes the <span class="math-container">\$n\$</span>th term of the sequence.</p>
 <p>I think the dumb approach is shorter.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>85</s> 82 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>85</s> 82 bytes</h1>
 <p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/55372/pajonk">pajonk</a></p>
 <pre class="lang-r prettyprint-override"><code>\(x,y,w,`[`=matrix,s=colSums)repeat show(s(s(((y*w*F):(y*w*(F=F+1)-1))[x])[y,,T]))
 </code></pre>
@@ -119,7 +125,7 @@ x*y*(x*n/w*w*y+(~-y*w+~-x)/2n+x*n%w)                // factor out 2
 </code></pre>
 <p>Proceed with the next part of the sequence <code>Y*W</code> to <code>2*Y*W-1</code> etc.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>52</s> 51 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>52</s> 51 bytes</h1>
 <p><em>Edit: -1 byte by taking <code>g</code> directly as a parameter</em></p>
 <pre class="lang-r prettyprint-override"><code>\(n,x,y,g)y*x*((y*g-g+1)*x/2+n%/%g*g*x*y+n%%g*x-.5)
 </code></pre>
@@ -141,20 +147,11 @@ function(n,l,w,h){
 <p><a href="https://rdrr.io/snippets/embed/?code=library(%22pryr%22)%0Axychunks%3Df(y*x*((y*g-g%2B1)*x%2F2%2Bn%25%2F%25g*g*x*y%2Bn%25%25g*x-.5))%0Ax%3D3%3By%3D4%3Bg%3D4%0Asapply(0%3A10%2Cfunction(n)xychunks(g%2Cn%2Cx%2Cy))" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
 <p>Same as above, but the using the <code>pryr</code> package to <a href="https://rdrr.io/cran/pryr/man/f.html" rel="nofollow noreferrer">'guess'</a> the function arguments from the code.</p>
 </div>
-<div id="pu4" class="pu"><h1>APL+WIN, 52 bytes</h1>
+<div id="pu5" class="pu"><h1>APL+WIN, 52 bytes</h1>
 <p>Prompts for a vector of n,x,y and w/x. Outputs first n terms. Index origin = 0</p>
 <pre><code>(n x y w)←⎕⋄n↑,+⌿[1] +/¨(n,y,w)⍴(+\0=x|i)⊂i←⍳n×x×y×w
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv0aeQoVCpUK5JlAIKPWouyXvUdtEHe1HPfujDWMVtPUPrdDI06nUASro3aKhHWNgW1GTqfmoqykTpKF3c97h6RWHp1cenl7@H2ge1/80LiMFYwUTBRMudQV1rjQuUwVTJJ6hgYIhEJpBuUYGQDkjONcUxDWFcw0NDIBGmSoYw1UbgI02BgA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu5" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> <s>51</s> 49 bytes</h1>
-<p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
-<p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
-<pre><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))//2
-</code></pre>
-<p>48 bytes if a float is allowed (will fail if the integers are too large as floats cannot represent all integers exactly):</p>
-<pre><code>lambda x,y,w,n:x*y*~(x*~(n*y*2-(n%w*2-w)*~-y))/2
-</code></pre>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="noreferrer">05AB1E</a>, <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="noreferrer">bytes</a></h1>
 <pre><code>∞&lt;IôIô€øO˜IôO
