--- a/q/274951.html
+++ b/q/274951.html
@@ -26,10 +26,55 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
-<tr d-ix="1"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>670</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="1"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
+<tr d-ix="2"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 670 bytes</h1>
+<pre><code>:z;s/[1-9]/&amp;#/g
+y/123456789/012345678/
+s/#0/9#/;tz;s/0//g
+h;z;s/^/0/
+:
+H
+y/10/!@/
+:c
+s/^/\n/
+:x
+s/^/#/
+:a;s/#/&lt;&lt;123456789#01&gt;/
+s/(.)&lt;.*\1(#*.).*&gt;/\2/;ta
+s/(.*)\n(.*)/sed -rn 's!(^| )([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})($| )! \\2 \\3 \\4 \\5 \\6!;t;i\1\\n\2\nba;:;p;:a'&lt;&lt;&lt;'\2'/e
+/ |^.\n.$/{s/\n.*//;bb}
+:y;s/[1-9]/&amp;#/g
+y/123456789/012345678/
+s/#0/9#/;ty;s/0//g
+bx;:b;/[@!]{2}/bc
+s/.//
+y/ /\n/
+:f;:e;s/@\n@/@/;s/@\n!/!/;s/!\n@/!/;s/!\n!/!!/;te
+/^\n*!*\n$/!s/.*/sed -rn 'h;s!.!!;x;:;s!.*!\&amp;!mp;T;x;s!.!!;x;t'&lt;&lt;&lt;'&amp;'/e
+s/\n(\n*)/\1/g
+/\n/bf
+y/!/#/
+G
+s/\n0.*//;T
+s/^(#*)\n\1$//;tr
+g
+s/.*\n//;T
+s/10(0*)(1*)$/01\2\1/;t
+s/(0*)0(1*)/\21\1/;t
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
+:r
+x
+s/.*\n//
+</code></pre>
+<p><a href="https://tio.run/##lVHLbuMwDLzrKyzYSGwBESWn6TaWUfi2@wG9lQ0Qb9PHYdUg9iFpm19f79Bp2mOxBmiMhhQ1HHab@2GoXkNHt362vKNJSo/qQL6cXywuf1wtyZ0hqY5SR8uUQi/1jlD5FASucFCV@iUXHekGh99KaI6A@xGmQGvUplTXn91T56@lb26L2hr2eWpsYc01cYlX1mPGFBzlT93mPpntYjLtdL56T4r8ttF3b@yP36EMxTphLhFzxAVigbjUoQ/P7JkjlxzbdajCNlTraV3XUy6ntFGUvK8sR5vRW4dprCEKbXtU1eE/HTucHWv3oWoDjerKI7VilCVCh@Rk10OoNihuODbU0Alp0oK0cGcEDrCHxhVHow3HjDR6mS@jnkKnrdYBTwoymif6zzbcgDgn@nHYicwqA@ZoVRB7CBU17QN0adndzzHtRgNuZKFYFRbDPgPR79SjjAENH2nvcmeK3Jsigx9w16NK1gnWCY0N@xMJ6@BMGJVP8AlX7dT@s@EwLNT878u2f36J3TDb/QM" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
+<p>(I'll come back to golf this, clean up the formatting, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
+<p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
 <pre><code>M?Gho_SsNmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZ
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/39fePSM/PrjYL7fY2TfZqDjdp8Q9Ja3Qo1grLCQkLjTDwyQ21iM9zc4oNbg4PSQw6v9/SwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
@@ -50,7 +95,7 @@ M                                                    # define g(G,h)
                 gLtGd                                #     map g over d with a first argument of G-1
           sCMc2s                                     #     take four square matrices and put them in a bigger square
     o                                                #   sort by lambda N
-       sN                                            #     sum of b
+       sN                                            #     flattened N
       S                                              #     sorted
      _                                               #     reversed
    h                                                 #   take the first element
@@ -62,7 +107,7 @@ M                                                    # define g(G,h)
                                      g          Q    # apply g on the result and the input
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Íonîü2íε`U0LsãεXô]€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
 </code></pre>
 <p>Brute-force. Generates all <span class="math-container">\$2^k\times 2^k\$</span> sized matrices consisting of 0s and 1s, and will output the first valid one for the given input-integer <span class="math-container">\$n\$</span>.</p>
