--- a/q/274448.html
+++ b/q/274448.html
@@ -26,18 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>05AB1E legacy</td><td>240812T074436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274908#274908">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>146</td><td>Setanta</td><td>240802T124842Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274633#274633">bb94</a></td></tr>
-<tr d-ix="2"><td>305</td><td>Wolfram Language Mathematica</td><td>240802T110622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274632#274632">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>125</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
-<tr d-ix="4"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
-<tr d-ix="5"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
-<tr d-ix="6"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
-<tr d-ix="7"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
-<tr d-ix="8"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
-<tr d-ix="9"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
+<tr d-ix="0"><td>071</td><td>Wolfram Language Mathematica</td><td>240815T132148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274998#274998">att</a></td></tr>
+<tr d-ix="1"><td>016</td><td>05AB1E legacy</td><td>240812T074436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274908#274908">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>146</td><td>Setanta</td><td>240802T124842Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274633#274633">bb94</a></td></tr>
+<tr d-ix="3"><td>305</td><td>Wolfram Language Mathematica</td><td>240802T110622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274632#274632">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>125</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
+<tr d-ix="5"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
+<tr d-ix="6"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
+<tr d-ix="7"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
+<tr d-ix="8"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
+<tr d-ix="9"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="10"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 16 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 71 bytes</h1>
+<pre><code>If[#==0,{},{a=⌊++j#⌋,##&amp;@@#0[j#-a]}]&amp;@Tr[Tr[i=j=1;#/++i!&amp;/@#]&amp;/@#]&amp;
+</code></pre>
+<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b73zMtWtnW1kCnulanOtH2UU@XtnaW8qOebh1lZTUHB2WD6Cxl3cTY2lg1h5CiaCDKtM2yNbRW1tfWzlRU03dQjoUQ/wOKMvNKopV17dJA3Lrg5MS8umquapCxtbU6EIYhhGWgYwTk6KLwQCSUawgVANG1XLX/AQ" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Input <code>[{numbers...}]</code>.</p>
+<pre><code>                                        Tr[i=  1;#/++i!&amp;/@#]&amp;/@#   from factoriadic
+                                     Tr[                        ]  sum
+If[#==0,{},{a=⌊++j#⌋,##&amp;@@#0[j#-a]}]&amp;@       j=1                   to factoriadic
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 16 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ζOāvćsāÌ‰‚˜2ôO0Ü
 </code></pre>
 <p>First halve of the program is a port of <a href="https://codegolf.stackexchange.com/a/274454/52210"><em>@alephalpha</em>'s Nekomata's answer</a> and the second halve is a port of <a href="https://codegolf.stackexchange.com/a/274460/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote both those answers as well!</p>
@@ -65,12 +76,12 @@
                  # (after the loop, the resulting list is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>175</s> <s>153</s> <s>150</s> 146 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>175</s> <s>153</s> <s>150</s> 146 bytes</h1>
 <pre><code>gniomh(x,y){z:=x+[0]*(fad@y-fad@x)le i idir(0,fad@y)z[i]+=y[i]le i idir(fad@z-1,0)ma i+1{z[i-1]+=z[i]//(i+2)z[i]%=i+2z[i]|scrios_cul@z()}toradh z}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwrOGcCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 305 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 305 bytes</h1>
 <p>A port of <a href="https://codegolf.stackexchange.com/a/274467/110802">@Dominic van Essen' R code</a> in Mathematica.</p>
 <p>305 bytes, it can be golfed more.</p>
 <hr />
@@ -102,7 +113,7 @@ addFactoriadic[{0, 2}, {0, 2}]       (*{1,1}*)   //Print
 addFactoriadic[{0, 1, 2}, {0, 1, 2}] (*{1}*)     //Print 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 125 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 125 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(v,w,`^`=c,y=w^0,s=seq){a=(!s(x&lt;-v^0)-(e=s(x+y)))*x+y*!s(y)-e
 while(any(a-(a=a-(b=(a&gt;e))*e-b+b[-1]^0)))1
 a[s(l=max(e*!!a))]}
@@ -123,7 +134,7 @@ a[s(l=max(e*!!a))]}
 }
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(a,b)=&gt;{b.map((x,i)=&gt;a[i]=(a[i]?a[i]:0)+x);c=0;for(i=(y=a.length)-1;i&gt;0;i--){d=(e=a[i]+c)%(z=i+2);c=e/z|0;a[i]=d};y?a[0]+=c:0;while(a[a.length-1]==0)a.pop();return a}
 </code></pre>
@@ -157,7 +168,7 @@ return a //return result
 }
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>+dṛ¦J‘$F+2/ƲÐLœr0
 </code></pre>
 <p>A dyadic Link that accepts factoriadic fractions as lists of integers on each side and yields their sum.</p>
@@ -181,10 +192,10 @@ return a //return result
               œr0 - trim trailing zeros
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
 <pre><code>+:#ᵑ{CU$x3+þç++;ž¿
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6Fju0rZQfbp1Y7RyqUmGsfXjf4eXa2tZH9x3av6Q4KbkYqmjBTePoWIXoWC4QaQikDHSMgCxdBBNEgtiGUB6IhugFAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6Fju0rZQfbp1Y7RyqUmGsfXjf4eXa2tZH9x3av6Q4KbkYqmjBTePoWIXoWC4QaQikDHSMgCxdBBNEgtiGUB6IhugFAA" rel="noreferrer">Attempt This Online!</a></p>
 <pre><code>+:#ᵑ{CU$x3+þç++;ž¿
 +                   Add two lists; pad with 0s
                     e.g. [0,2] [-1] -&gt; [-1,2]
@@ -206,7 +217,7 @@ return a //return result
 </code></pre>
 <p>The last step <code>;ž¿</code> is nondeterministic, so we need to add the <code>-1</code> flag to return only the first result, where all trailing 0s are removed.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
 <pre><code>Ｆ⁻ＬηＬθ⊞θ⁰≔⁰ζＦ⮌Ｅηκ«≧⁺⁺§θι⊟ηζ§≔θι⎇ι﹪ζ⁺²ιζ≧÷⁺²ιζ»Ｗ∧θ¬↨θ⁰⊟θＩθ
 </code></pre>
 <p><a href="https://tio.run/##XVBNawMhFDxnf8U7PsFCmmtP2/YS6IYl9BZykKxdpaKJuts2Ib/dPjWU0IvMwHy88aCEPzhhUvpwHrDTdgr4Ju0YFSrG4QZPjDHop0CIw5I9NW0IerS45HAmVrxbOUsfJHbiiIrDZ7ZcmgXRKt7qUUXszRQ45BfbuLaD/M6Rmqp6Rz7GauKieu4lHN6lt8L/IMHODZNxeL5FrXJEsWbvv8q1ja961oO8F9eaa/OltJGArR1yycZFfBY0oswso722dDXddsrZlb6IEAtPabejP3jksNpz@IP79DCbXw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -236,14 +247,14 @@ return a //return result
 <p>Output the final result.</p>
 <p>Bonus 136-byte <a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a> solution: <a href="https://tio.run/##RY29DgIxDIN3P0WHgpK2VJey8jPyEL2cDgkGFgbEeO9e0i4ssT/Lij/P7@t9bzu6rU2RnGKuyaFifkT4gAVVjeNqN5METo5y6MBGyTG8@KNx9QU9hnWtcz2diRJvmSMbHMpFOIrQlQovDLGfvTPXzbEE@LyH7U4aFdpa36w6pquYTsmV7ocOlH8y7A8" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Does not work with negative numbers.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:A
 </code></pre>
 <p><a href="https://tio.run/##dc1BCsMgEAXQfW/RndaJxCxTJsFcQ1yojcUaYmhKV9Krp0nbZQrDwP@PYW7maWZ3D9OjGNOlXzyuQ5TBEjjnUoOy6L6h0xAoNhEl63I22baeSOggMJFzRY9YEMvQMQMObRNgC6dXoK2y23nUdazlcj64NM5p6PmQrsQTtb7QlO60YqcuoVql@E/b3jPxU/Hx5Q0" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>==-</code> if former is <code>[]</code> and latter is 0. Former is never negative and latter, including <code>-</code>, is never positive</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu10" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Assumes index origin 0.</p>
 <pre><code>{x↓⍨-⊥⍨0=x←(⊢⊤⊥∘m)(⊢+2××)⍳≢m←+⌿↑⍺⍵}
 </code></pre>
