--- a/q/274951.html
+++ b/q/274951.html
@@ -26,11 +26,61 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
-<tr d-ix="1"><td>824</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>843</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="1"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="2"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 843 bytes</h1>
+<pre><code>:z;s/[1-9]/&amp;#/g
+y/123456789/012345678/
+s/#0/9#/;tz;s/0//g
+h;z;s/^/0/
+:
+H
+y/10/!@/
+:c
+s/^/\n/
+:x
+s/^/#/
+:a;s/#/&lt;&lt;123456789#01&gt;/
+s/(.)&lt;.*\1(#*.).*&gt;/\2/;ta
+s/(.*)\n(.*)/sed -rn 's!(^| )([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})($| )! \\2 \\3 \\4 \\5 \\6 \\7 \\8 \\9 \\n!;t;i\1\\n\2\nba;:;p;:a'&lt;&lt;&lt;'\2'/e
+T
+s/ (.+) (.+) (.+) (.+) (.+) (.+) (.+) (.+) \n/ \1\3 \2\4 \5\7 \6\8  /
+tb;/^1.....$|^1..$/bb
+:y;s/[1-9]/&amp;#/g
+y/123456789/012345678/
+s/#0/9#/;ty;s/0//g
+bx;:b;/[@!]{5}/bc;s/.*\n//
+s/[!@]/&amp; /g
+y/ /\n/
+:f;:e;s/@\n@/@/;s/@\n!/!/;s/!\n@/!/;s/!\n!/!!/;te
+/^\n*!*\n*$/!s/.*/sed -rn 'h;s!.!!;x;:;s!.*!\&amp;!mp;T;x;s!.!!;x;t'&lt;&lt;&lt;'&amp;'/e
+s/\n(\n*)/\1/g
+/\n/bf
+y/!/#/
+bn
+:h;s/ \n.*//;s/\n//;p;bb
+:n
+G
+s/\n0.*//;T
+s/^(#*)\n\1$//;tr
+g
+s/.*\n//;T
+s/10(0*)(1*)$/01\2\1/;t
+s/(0*)0(1*)/\21\1/;t
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
+:r
+x
+s/.*\n//
+</code></pre>
+<p><a href="https://tio.run/##rVJNb6MwEL37V9gCJcAqDKYhLTaquO3@gN7iIoWWfhzWjQKHpB9/vfQNEd3rrrSWxnrMDG/Gb6bv7sfRvNqetnpV3tIioEdxIp1frIvN5VVJ2QxJ9BRkVAZkB87PCJlPlmGDD2HEL/4xI1Xj406w23nA4wQDoB1yA6qqb/Yg09fMG6VxlSZOR0GSxmlyTS5Hld0USWLn@aa@u5erg5fLXkXNu4yjba1u35z@@F8oBKmSzuWwC9gaVsA2sEvYFayEeWUH@@w0kMudb3fW2L01u2VVVUuXL6kTN2hdRumP@G8uqCTBhpI51yy42AbVJImhtdTolE/4ziCkthXm9I/zOs3zao/WgHJ6c/FB7R0CEN4TZ29VDUI5Ecrz7B6s6ZBSO19TTWekSDFS7JsRfIBDJ6hxPlFgTEJSzP1nbE@2V6lSFi0wSpRbqN97ewPHHBgmCResYI8GItDE5DQ64nbaBzSmeJNaLwzoIJtHBe6Bn4AhsDhe/Jz@zqYQT6LBXmGLnA7hGA7iUcyvnsI6i7IkjnQSh5APQ9DI4t2DN2M31lGfnVAaQk6i0QKHfeYgjt@E46hFLtaiEOXny354fvH9uDp8AQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
+<p>(I'll come back to golf this, clean up the formatting, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
+<p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
+<p>oh yeah, if you want to check the matrices are in the right order <a href="https://tio.run/##JcsxCoAwEETRfs8hEgM6u5bmAh7AMqUiNiYYGy/vusGpPg@mbKvqTBPNlGmngsHHEwiLpbBj3znxXQOWOEZBuM2rcmXEUX58IGCEekdrM1PlN@X7SGfR/voA" rel="nofollow noreferrer">this</a> outputs matrices infinitely starting at whatever matrix you input</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
 <pre><code>M?Gho_SsNmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZ
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/39fePSM/PrjYL7fY2TfZqDjdp8Q9Ja3Qo1grLCQkLjTDwyQ21iM9zc4oNbg4PSQw6v9/SwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
@@ -62,52 +112,6 @@ M                                                    # define g(G,h)
                                        &gt;2            #   is less than 2
                                      g          Q    # apply g on the result and the input
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 824 bytes</h1>
-<pre><code>:z;s/[1-9]/&amp;#/g
-y/123456789/012345678/
-s/#0/9#/;tz;s/0//g
-h;z;s/^/0/
-:
-H
-y/10/!@/
-:c
-s/^/\n/
-:x
-s/^/#/
-:a;s/#/&lt;&lt;123456789#01&gt;/
-s/(.)&lt;.*\1(#*.).*&gt;/\2/;ta
-s/(.*)\n(.*)/sed -rn 's!(^| )([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})($| )! \\2 \\3 \\4 \\5 \\6 \\7 \\8 \\9 \\n!;t;i\1\\n\2\nba;:;p;:a'&lt;&lt;&lt;'\2'/e
-s/ (.+) (.+) (.+) (.+) (.+) (.+) (.+) (.+) / \1\3 \2\4 \5\7 \6\8 /
-/ |^.\n....$|^.\n.$/{s/ \n.*//;s/.//;s/\n//;bb}
-:y;s/[1-9]/&amp;#/g
-y/123456789/012345678/
-s/#0/9#/;ty;s/0//g
-bx;:b;/[@!]{5}/bc
-s/[!@]/&amp; /g
-y/ /\n/
-:f;:e;s/@\n@/@/;s/@\n!/!/;s/!\n@/!/;s/!\n!/!!/;te
-/^\n*!*\n?$/!s/.*/sed -rn 'h;s!.!!;x;:;s!.*!\&amp;!mp;T;x;s!.!!;x;t'&lt;&lt;&lt;'&amp;'/e
-s/\n(\n*)/\1/g
-/\n/bf
-y/!/#/
-G
-s/\n0.*//;T
-s/^(#*)\n\1$//;tr
-g
-s/.*\n//;T
-s/10(0*)(1*)$/01\2\1/;t
-s/(0*)0(1*)/\21\1/;t
-y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
-:r
-x
-s/.*\n//
-</code></pre>
-<p><a href="https://tio.run/##rVLLbtswELzzK0RIsCUW1oqy5USikOrWfEBuZgxYifI4hDEsHewm/vWqsxScXlugBJYYDsnZxez23eM4Vj9NTxu9KO9pFtKzOJHOl6tifXVdUnaBJHoKMypDMgO/zwgvXwzDLQ6iErf8MSPZ4PAgmLYO8OhhCLTD25Dq@ks9zPQN68ZpUqfK6jhUaZKqG7I5suz8jUqs45367jFYHFww72W8/QySeNPI@w@rz/8LRRCVgbU5YolYIQrEGnGFuEaUCCfNYF6tBrK5de3OVGZvqt28ruu5zefUofAgTr8lf7NRACWkyzlfwYnWyESCgs9tal2KFU0oog/oAigiOJn6HRaTaduzqE7/2MTTpYnt0VStIW9EcaaWe7eRDXQCrxNMfXwyVYcvjXUNNTQhSZKRZO6CwAEOnaCtdUoq675HJFGv@tPCF9PLVEqDzIyUtDP5tjd3IC4Xg7dzNrmJEYBWQlajIi6nfUJhkqfqh7/OvCl3PGoYIoyM1RGI4SCeBaf2NvG1zuJMJbFWSQRb4LrGKx40sBnTmD09kXAQBhlf@QyLueogjl@C46hFLpZiJQpRil/v@@H13fXj4vAb" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
-<p>(I'll come back to golf this, clean up the formatting, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
-<p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
-<p>oh yeah, if you want to check the matrices are in the right order <a href="https://tio.run/##JcsxCoAwEETRfs8hEgM6u5bmAh7AMqUiNiYYGy/vusGpPg@mbKvqTBPNlGmngsHHEwiLpbBj3znxXQOWOEZBuM2rcmXEUX58IGCEekdrM1PlN@X7SGfR/voA" rel="nofollow noreferrer">this</a> outputs matrices infinitely starting at whatever matrix you input</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Íonîü2íε`U0LsãεXô]€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
