--- a/q/274951.html
+++ b/q/274951.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>843</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>812</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
 <tr d-ix="1"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="2"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 843 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 812 bytes</h1>
 <pre><code>:z;s/[1-9]/&amp;#/g
 y/123456789/012345678/
 s/#0/9#/;tz;s/0//g
@@ -59,9 +59,6 @@ y/ /\n/
 s/\n(\n*)/\1/g
 /\n/bf
 y/!/#/
-bn
-:h;s/ \n.*//;s/\n//;p;bb
-:n
 G
 s/\n0.*//;T
 s/^(#*)\n\1$//;tr
@@ -74,7 +71,7 @@ y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
 x
 s/.*\n//
 </code></pre>
-<p><a href="https://tio.run/##rVJNb6MwEL37V9gCJcAqDKYhLTaquO3@gN7iIoWWfhzWjQKHpB9/vfQNEd3rrrSWxnrMDG/Gb6bv7sfRvNqetnpV3tIioEdxIp1frIvN5VVJ2QxJ9BRkVAZkB87PCJlPlmGDD2HEL/4xI1Xj406w23nA4wQDoB1yA6qqb/Yg09fMG6VxlSZOR0GSxmlyTS5Hld0USWLn@aa@u5erg5fLXkXNu4yjba1u35z@@F8oBKmSzuWwC9gaVsA2sEvYFayEeWUH@@w0kMudb3fW2L01u2VVVUuXL6kTN2hdRumP@G8uqCTBhpI51yy42AbVJImhtdTolE/4ziCkthXm9I/zOs3zao/WgHJ6c/FB7R0CEN4TZ29VDUI5Ecrz7B6s6ZBSO19TTWekSDFS7JsRfIBDJ6hxPlFgTEJSzP1nbE@2V6lSFi0wSpRbqN97ewPHHBgmCResYI8GItDE5DQ64nbaBzSmeJNaLwzoIJtHBe6Bn4AhsDhe/Jz@zqYQT6LBXmGLnA7hGA7iUcyvnsI6i7IkjnQSh5APQ9DI4t2DN2M31lGfnVAaQk6i0QKHfeYgjt@E46hFLtaiEOXny354fvH9uDp8AQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##rVLLbqNAELzPV8wIZMOsTDPEOIFBEbfdD8jNEySTkMdhJ5bhYOfx6yHVWGSvu9IiNaqpbqqbmu67@3EsX21PW7MqbmkR0KM4kcku1vnm8qqgdIYkegpSKgKyA9enhMony7DBQZTiF3@YkqpxuBNMOw94nGAAtENtQFX1rR6k5pp1oySuEu1MFOgkTvQ1uQxddlNGx87zm/ruXq4OXi57FTXvMo62tbp9c@bjf6EQoko6lyEuEGtEjtggLhFXiALhlR3sszNALnO@3dnS7m25W1ZVtXTZkjpxg9FllPyI/@YFlyTU0DLjnjk326CbJDG0lhqT8BO@MwipbUV5@sf7Os331R5tCcnpn/MPau@QgPGeuHqragjKSVCe7@7Blh1KaudrqumMFClGirkZgQMcOkGN81pBUYekWPvPtT3ZXiVKWYzASCu3UL/39gbEnBgmCxfsYI8BIsjE5Awm4nHaBwymeJN@TukU6mTZ6gaLgzVxJgQxHMSjmH9rSps0SnUcGR2H8AcuG1TxcoFNmca@mTMJK@HU5Aot8DBXHsTxW3AcjcjEWuSi@HzZD88vvh9Xhy8" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
 <p>(I'll come back to golf this, clean up the formatting, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
 <p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
