--- a/q/274973.html
+++ b/q/274973.html
@@ -61,6 +61,13 @@
 <pre><code>f x y = x &lt;&gt; y &lt;&gt; x
 </code></pre>
 And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
+<li>There should be a &quot;splits such that ...&quot; builtin. Also useful <a href="https://codegolf.stackexchange.com/a/274981/56656">here</a>.
+<ul>
+<li>It seems predictable enough that common ways this will be used are &quot;splits such that the first section ...&quot; and &quot;splits such that the second section ...&quot; so those should be built in as well.</li>
+</ul>
+</li>
+<li>There should be an analog to <code>tk</code> (<code>take</code>) that takes off the back of the list. This would make it easier to check if a section starts and ends with the same thing.</li>
+<li><code>(@~)</code> should have higher precedence than <code>(&lt;)</code>. Currently it's just at the default.</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 46 bytes</h1>
