--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240815T230840Z
+"   /golfscore                                      20240815T234651Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/187510.html">Do the 26 richest billionaires own as much wealt: 0187510</a>
 <a href="q/103403.html">Print the f  f times table                      : 0103403</a>
 <a href="q/274973.html">Erase the loops                                 : 0274973</a>
 <a href="q/119361.html">Easier communication means faster coding means f: 0119361</a>
